2003-04-03  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* fill-series.[ch]: Introduced a new filling tool just like in XL.

2003-04-02  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* data-shuffling.[ch]: Introduced a new tool for data shuffling.

2003-01-28  Jody Goldberg <jody@gnome.org>

	* Release 1.1.16

2002-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.1.15

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.14

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.13

2002-12-17  Jody Goldberg <jody@gnome.org>

	* simulation.c (simulation_tool) : patch minor memory overrun.

2002-12-18  Morten Welinder  <terra@diku.dk>

	* analysis-tools.c (analysis_tool_regression_engine_run): Fix it
	right.

2002-12-18  Morten Welinder  <terra@diku.dk>

	* analysis-tools.c (analysis_tool_regression_engine_run): Fix
 	memory management for ->missing.
	(union_of_int_sets): Cleanup.

2002-12-16  Jody Goldberg <jody@gnome.org>

	* analysis-tools.c (cb_cut_into_cols) : It is ok for sheet B to be
	  NULL.
	(cb_cut_into_rows) : ditto.

2002-11-15  Jody Goldberg <jody@gnome.org>

	* Release 1.1.12

2002-11-04  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* dao.c: Included headers for some standard library functions.

2002-11-01  Jody Goldberg <jody@gnome.org>

	* Release 1.1.11

2002-10-27  Jody Goldberg <jody@gnome.org>

	* Release 1.1.10

2002-10-25  Morten Welinder  <terra@diku.dk>

	* dao.c (dao_prepare_output): Fix col/row confusion.

2002-10-14  Morten Welinder  <terra@diku.dk>

	* analysis-tools.c (analysis_tool_ttest_neqvar_engine_run): Use
	gnumabs, not fabs.

2002-10-10  Morten Welinder  <terra@diku.dk>

	* dao.h (data_analysis_output_t): Avoid "gboolean ... : 1".
	* auto-correct.c (struct autocorrect): Ditto.

2002-10-03  Jody Goldberg <jody@gnome.org>

	* analysis-tools.c : Convert to using command context rather than
	 accessing the gui-control directly.
	* random-generator.c : ditto.

2002-09-30  Jody Goldberg <jody@gnome.org>

	* Release 1.1.9
