@@ -1,3 +1,7 @@
+2003-04-09  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* scenarios.[ch]: Start of scenarios like in XL.
+
 2003-04-03  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* fill-series.[ch]: Introduced a new filling tool just like in XL.
